--- a/.docker/nginx/default.conf
+++ b/.docker/nginx/default.conf
@@ -4,24 +4,24 @@ server {
   server_name miners.kalteng.go.id;
 
   # ACME challenge untuk Let's Encrypt
-  location /.well-known/acme-challenge/ {
-    alias /var/www/public/.well-known/acme-challenge/;
-  }
+#  location /.well-known/acme-challenge/ {
+#    alias /var/www/public/.well-known/acme-challenge/;
+#  }
 
-  return 301 https://$host$request_uri;
-}
+#  return 301 https://$host$request_uri;
+#}
 
 # Server HTTPS
-server {
-  listen 443 ssl http2;
-  server_name miners.kalteng.go.id;
+#server {
+#  listen 443 ssl http2;
+#  server_name miners.kalteng.go.id;
 
-  ssl_certificate     /etc/letsencrypt/live/miners.kalteng.go.id/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/miners.kalteng.go.id/privkey.pem;
+#  ssl_certificate     /etc/letsencrypt/live/miners.kalteng.go.id/fullchain.pem;
+#  ssl_certificate_key /etc/letsencrypt/live/miners.kalteng.go.id/privkey.pem;
 
   # Konfigurasi minimal SSL (cukup untuk jalan)
-  ssl_session_timeout 1d;
-  ssl_session_cache shared:SSL:10m;
+#  ssl_session_timeout 1d;
+#  ssl_session_cache shared:SSL:10m;
   index index.php index.html;
   root /var/www/public;
 
