php ini max upload

--- a/.docker/php/php.ini
+++ b/.docker/php/php.ini
@@ -5,3 +5,10 @@
 
 ; [mbstring]
 ; mbstring.language = Japanese
+
+; PHP upload limit
+file_uploads = On
+memory_limit = 256M
+upload_max_filesize = 20M
+post_max_size = 20M
+max_file_uploads = 20
