php ini max upload

--- a/.docker/php/php.ini
+++ b/.docker/php/php.ini
@@ -11,4 +11,4 @@ file_uploads = On
 memory_limit = 256M
 upload_max_filesize = 20M
 post_max_size = 20M
-max_file_uploads = 20
+max_file_uploads = 20M
