--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
             - 5173:5173
         volumes:
             - .:/var/www:cached
+            - .docker/php/php.ini:/usr/local/etc/php/conf.d/uploads.ini
 
     ####################################################################################################
     # Nginx
