--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,28 @@
+version: '3.9'
+
 services:
-
     ####################################################################################################
-    # PHP
+    # FrankenPHP (ganti PHP + Nginx)
     ####################################################################################################
-    php:
-        build: .docker/php
-        ports:
-            - 5173:5173
-        volumes:
-            - .:/var/www:cached
-            - .docker/php/php.ini:/usr/local/etc/php/conf.d/uploads.ini
-
-    ####################################################################################################
-    # Nginx
-    ####################################################################################################
-    nginx:
-        image: nginx
+    frankenphp:
+        image: dunglas/frankenphp
+        container_name: frankenphp
         ports:
             - "80:80"
             - "443:443"
         volumes:
-            - .:/var/www
-            - .docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
-            - .docker/nginx/nginx.conf:/etc/nginx/nginx.conf
+            - .:/app
+            - .docker/php/php.ini:/usr/local/etc/php/conf.d/uploads.ini
             - .docker/letsencrypt:/etc/letsencrypt
-        depends_on:
-            - php
+        environment:
+            # Domain project kamu
+            SERVER_NAME: miners.kalteng.go.id
+            # Jalankan Laravel (gunakan runtime bawaan FrankenPHP)
+            APP_RUNTIME: Runtime\\FrankenPhpSymfony\\Runtime
+            FRANKENPHP_CONFIG: |
+                worker / {
+                  root /app/public
+                }
 
     ####################################################################################################
     # phpMyAdmin
@@ -33,36 +30,31 @@ services:
     phpmyadmin:
         image: phpmyadmin/phpmyadmin
         ports:
-            - 8080:80
-        links:
-            - db
+            - "8080:80"
         environment:
             PMA_HOST: db
             PMA_PORT: 3306
             PMA_ARBITRARY: 1
+        depends_on:
+            - db
         volumes:
             - .docker/phpmyadmin/sessions:/sessions
 
-    # ####################################################################################################
-    # # DATABASE (MariaDB)
-    # ####################################################################################################
+    ####################################################################################################
+    # Database (MariaDB)
+    ####################################################################################################
     db:
         image: mariadb:10.11
+        container_name: mariadb
         ports:
-            - 3306:3306
-        volumes:
-            - .docker/db/data:/var/lib/mysql
-            - .docker/logs:/var/log/mysql
-            - .docker/db/my.cnf:/etc/mysql/conf.d/my.cnf
-            - .docker/db/sql:/docker-entrypoint-initdb.d
+            - "3306:3306"
         environment:
             MYSQL_ROOT_PASSWORD: root
             MYSQL_DATABASE: db_esdmpermit
             MYSQL_USER: ditaria
             MYSQL_PASSWORD: 177borneo
-
-    certbot:
-        image: certbot/certbot
         volumes:
-            - .:/var/www
-            - .docker/letsencrypt:/etc/letsencrypt
+            - .docker/db/data:/var/lib/mysql
+            - .docker/logs:/var/log/mysql
+            - .docker/db/my.cnf:/etc/mysql/conf.d/my.cnf
+            - .docker/db/sql:/docker-entrypoint-initdb.d
