--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,11 +11,13 @@ services:
         volumes:
             - .:/app
             - ./.docker/php/php.ini:/usr/local/etc/php/conf.d/uploads.ini
-            - ./.docker/letsencrypt:/etc/letsencrypt
+            # opsional: kalau mau simpan sertifikat di folder tertentu biar persist
+            - ./.docker/caddy_data:/data
+            - ./.docker/caddy_config:/config
         environment:
             SERVER_NAME: miners.kalteng.go.id
             FRANKENPHP_CONFIG: |
-                :80 {
+                miners.kalteng.go.id {
                     root * /app/public
                     php_server
                     file_server
