--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,12 +11,10 @@ services:
         volumes:
             - .:/app
             - ./.docker/php/php.ini:/usr/local/etc/php/conf.d/uploads.ini
-            # opsional: kalau mau simpan sertifikat di folder tertentu biar persist
             - ./.docker/caddy_data:/data
             - ./.docker/caddy_config:/config
         environment:
-            SERVER_NAME: miners.kalteng.go.id
-            FRANKENPHP_CONFIG: |
+            CADDYFILE: |
                 miners.kalteng.go.id {
                     root * /app/public
                     php_server
