--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,21 @@ services:
             - ./.docker/Caddyfile:/etc/frankenphp/Caddyfile
 
     ####################################################################################################
+    # Laravel Queue Worker
+    ####################################################################################################
+    queue:
+        build:
+            context: ./app/php
+            dockerfile: Dockerfile
+        container_name: laravel-queue
+        command: php artisan queue:work --tries=3 --sleep=3
+        volumes:
+            - .:/app
+            - ./.docker/php/php.ini:/usr/local/etc/php/conf.d/uploads.ini
+        depends_on:
+            - db
+
+    ####################################################################################################
     # phpMyAdmin
     ####################################################################################################
     phpmyadmin:
