--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,7 @@ services:
             dockerfile: Dockerfile
         container_name: laravel-queue
         command: php artisan queue:work --tries=3 --sleep=3
+        working_dir: /app
         volumes:
             - .:/app
             - ./.docker/php/php.ini:/usr/local/etc/php/conf.d/uploads.ini
