--- a/.docker/php/supervisord.conf
+++ b/.docker/php/supervisord.conf
@@ -1,12 +1,16 @@
 [supervisord]
 nodaemon=true
+logfile=/var/log/supervisord.log
+pidfile=/var/run/supervisord.pid
+childlogdir=/var/log/supervisor
 
 [program:laravel-queue]
 process_name=%(program_name)s_%(process_num)02d
-command=php artisan queue:work --sleep=3 --tries=3 --timeout=90
+command=php /app/artisan queue:work --sleep=3 --tries=3 --timeout=90
 autostart=true
 autorestart=true
 numprocs=1
 redirect_stderr=true
-stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
+stdout_logfile=/app/storage/logs/worker.log
+stopwaitsecs=3600
+user=root
