--- a/.docker/php/supervisord.conf
+++ b/.docker/php/supervisord.conf
@@ -4,6 +4,9 @@ logfile=/var/log/supervisord.log
 pidfile=/var/run/supervisord.pid
 childlogdir=/var/log/supervisor
 
+[supervisorctl]
+serverurl=unix:///var/run/supervisor.sock
+
 [program:laravel-queue]
 process_name=%(program_name)s_%(process_num)02d
 command=php /app/artisan queue:work --sleep=3 --tries=3 --timeout=90
