--- a/.docker/php/supervisord.conf
+++ b/.docker/php/supervisord.conf
@@ -1,8 +1,15 @@
+[unix_http_server]
+file=/var/run/supervisor.sock   ; path socket
+chmod=0700                      ; permission
+
 [supervisord]
 nodaemon=true
 logfile=/var/log/supervisord.log
 pidfile=/var/run/supervisord.pid
 childlogdir=/var/log/supervisor
+
+[rpcinterface:supervisor]
+supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 [supervisorctl]
 serverurl=unix:///var/run/supervisor.sock
