--- a/.docker/php/supervisord.conf
+++ b/.docker/php/supervisord.conf
@@ -1,6 +1,6 @@
 [unix_http_server]
-file=/var/run/supervisor.sock   ; path socket
-chmod=0700                      ; permission
+file=/var/run/supervisor.sock
+chmod=0700
 
 [supervisord]
 nodaemon=true
