--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
     ####################################################################################################
-    # FrankenPHP (ganti PHP + Nginx)
+    # FrankenPHP Service
     ####################################################################################################
     frankenphp:
         build:
@@ -42,3 +42,29 @@ services:
         env_file:
             - .env
         restart: always
+
+    ####################################################################################################
+    # Nginx untuk SSL dan Reverse Proxy ke FrankenPHP
+    ####################################################################################################
+    nginx:
+        image: nginx:alpine
+        container_name: miners-nginx
+        ports:
+            - "80:80"
+            - "443:443"
+        volumes:
+            - ./.docker/nginx:/etc/nginx/conf.d
+            - ./.docker/nginx/certs:/etc/letsencrypt
+            - ./.docker/nginx/webroot:/var/www/certbot
+        depends_on:
+            - frankenphp
+
+    #####################################################################################################
+    # Certbot untuk SSL Certificate
+    #####################################################################################################
+    certbot:
+        image: certbot/certbot
+        container_name: certbot
+        volumes:
+            - ./.docker/nginx/certs:/etc/letsencrypt
+            - ./.docker/nginx/webroot:/var/www/certbot
