--- a/.docker/nginx/default.conf
+++ b/.docker/nginx/default.conf
@@ -7,23 +7,39 @@ server {
     }
 
     location / {
-        return 301 https://$host$request_uri;
-    }
-}
-
-server {
-    listen 443 ssl http2;
-    server_name miners.kalteng.go.id;
-
-    ssl_certificate     /etc/letsencrypt/live/miners.kalteng.go.id/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/miners.kalteng.go.id/privkey.pem;
-
-    location / {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto https;
-
         proxy_pass http://frankenphp:80;
     }
 }
+
+# server {
+#     listen 80;
+#     server_name miners.kalteng.go.id;
+
+#     location /.well-known/acme-challenge/ {
+#         root /var/www/certbot;
+#     }
+
+#     location / {
+#         return 301 https://$host$request_uri;
+#     }
+# }
+
+# server {
+#     listen 443 ssl http2;
+#     server_name miners.kalteng.go.id;
+
+#     ssl_certificate     /etc/letsencrypt/live/miners.kalteng.go.id/fullchain.pem;
+#     ssl_certificate_key /etc/letsencrypt/live/miners.kalteng.go.id/privkey.pem;
+
+#     location / {
+#         proxy_set_header Host $host;
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header X-Forwarded-Proto https;
+
+#         proxy_pass http://frankenphp:80;
+#     }
+# }
