--- a/.docker/nginx/default.conf
+++ b/.docker/nginx/default.conf
@@ -36,16 +36,21 @@ server {
     ssl_certificate     /etc/letsencrypt/live/miners.kalteng.go.id/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/miners.kalteng.go.id/privkey.pem;
 
+    location = /internal {
+        return 301 /internal/;
+    }
+
     location /internal/ {
-    rewrite ^/internal/?(.*)$ /$1 break;
+        rewrite ^/internal/?(.*)$ /$1 break;
 
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto https;
-    proxy_set_header X-Forwarded-Prefix /internal;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto https;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Prefix /internal;
 
-    proxy_pass http://frankenphp-internal:80;
+        proxy_pass http://frankenphp-internal:80;
     }
 
     location / {
