--- a/internal/Dockerfile
+++ b/internal/Dockerfile
@@ -4,6 +4,8 @@ WORKDIR /app
 
 COPY . /app
 
+COPY Caddyfile /etc/frankenphp/Caddyfile
+
 EXPOSE 80
 
 CMD ["frankenphp", "run", "--config", "/etc/frankenphp/Caddyfile"]
